--- a/public/index.html
+++ b/public/index.html
@@ -70,10 +70,10 @@
 
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-
-    <div style="font-size: 0px;color:black">
-        Loading...
+    <div id="root">
+        <div style="text-align:center;color:black">
+            Loading...
+        </div>
     </div>
     <!--
       This HTML file is a template.
