--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta name="theme-color" content="#000000" />
   <meta http-equiv="Cache-control" content="no-cache">
   <meta name="description" content="IT Consulting for Web/Mobile Applications" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
