--- a/public/index.html
+++ b/public/index.html
@@ -85,11 +85,7 @@
 
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root">
-            <div style="text-align:center;color:black">
-                Loading...
-            </div>
-        </div>
+        <div id="root"></div>
         <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -99,5 +95,9 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    --></body>
+    -->
+        <div style="text-align:center;color:black" class="loading">
+            Loading...
+        </div>
+    </body>
 </html>
