--- a/public/index.html
+++ b/public/index.html
@@ -96,8 +96,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-        <div style="text-align:center;color:black" class="loading">
-            Loading...
+        <div style="text-align:center;" class="loading">
+            
         </div>
     </body>
 </html>
